<resources>
    <string name="app_name">CleanDrinksApplication</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="google_plus_sign_in">Sign up using Google+</string>
    <string name="facebook_sign_in">Sign up using Facebook</string>
    <string name="application_name">Water Monitor</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="login_create_an_account"> Create account </string>
    <string name="login_sign_up_button_text">Sign up</string>
    <string name="login_heading_image_content_description">Image of a water droplet smiling</string>
    <string name="sign_up_heading">Sign up</string>
    <string name="sign_up_icon_content_description">Icon of a user with a plus symbol next to them.</string>
    <string name="alcohol_category_name">Alcohol</string>
    <string name="caffeine_category_name">Caffeine</string>
    <string name="accessibility_label_for_caffeine_image">Images of different machines for brewing coffee</string>
    <string name="accessibility_label_for_alcohol_image">Images of different bottles of alcohol</string>
    <string name="button_plus_symbol">+</string>
    <string name="button_minus_symbol">-</string>
    <string name="espresso_heading">Espresso</string>
    <string name="moka_pot_heading">Moka Pot</string>
    <string name="french_press_heading">French Press</string>
    <string name="accessibility_label_for_espresso_cup_image">Image of an espresso cup</string>
    <string name="accessibility_label_for_french_press_image">Image of a french press</string>
    <string name="accessibility_label_for_moka_pot_image">Image of a Moka pot</string>
    <string name="receipt_heading_title">TODAY</string>
    <string name="place_holder_caffine_entry_text">Time: 15:30pm  Espresso</string>
    <string name="place_holder_alcohol_entry_text">Time: 11:40pm  Beer</string>
    <string name="receipt_heading_title_yesterday">YESTERDAY</string>
    <string name="place_holder_alcohol_entry_text_wine">Time: 12:40pm  Red wine</string>
    <string name="title_for_category_types_wine">WINE</string>
    <string name="title_for_category_types_beer">BEER</string>
    <string name="title_for_category_types_spirit">SPIRITS</string>
    <string name="title_for_category_types_liquors">LIQUORS</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_profile_height">Height</string>
    <string name="settings_profile_weight">Weight</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_notification_smartphone">Smartphone</string>
    <string name="settings_notification_smartwatch">Smartwatch</string>
    <string name="goal_gold_medal_image_content_description">Gold medal image</string>
    <string name="goal_parent_heading">Create a goal</string>
    <string name="goal_child_paragraph">This will allow you to set  targets.</string>
    <string name="goal_placeholder_text">5 glasses</string>
    <string name="goal_target_image_content_description">Image of a target with an arrow inside, to represent a target goal.</string>
    <string name="goal_add_button_content_description">Add goal button</string>
    <string name="goal_remove_button_content_description">Remove goal button</string>
    <string name="goal_add_button_icon_text">+</string>
    <string name="goal_remove_button_icon_text">-</string>
    <string name="settings_bathroom_scales_weight_icon">Image of bathroom scales to represent weight</string>
    <string name="settings_bathroom_tape_height_icon">Image of a tape measure to represent height</string>
    <string name="settings_smartphone_preference_icon">Image of a  to represent a smartphone device</string>
    <string name="settings_smartwatch_preference_icon">Image of a  to represent a smartwatch device</string>
    <string name="settings_preferences_toggle_on_text">on</string>
    <string name="achivement_card_heading_text">Achievements</string>
    <string name="facebook_app_id">222172451584698</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_height_activity_heading">A bit about you.</string>
    <string name="weight_height_activity_sub_heading">Please enter weight and height.</string>
    <string name="weight_height_weight_hint_text">"E.g 25"</string>
    <string name="weight_height_weight_unit">KG"</string>
    <string name="weight_height_activity_weight_hint"> Weight </string>
    <string name="weight_height_activity_height_hint"> Height </string>
    <string name="weight_height_example_height_hint">Height in ft inches 5.11""</string>
    <string name="weight_height_activity_height_image_content_description">Image of a weight lifter</string>
    <string name="next_button_text">Next</string>
    <string name="add_a_goal_heading">Set a goal</string>
    <string name="add_a_goal_active_heading">How active are you?</string>
    <string name="add_a_goal_active_radio_text_low">Low</string>
    <string name="add_a_goal_active_radio_text_med">Moderate</string>
    <string name="add_a_goal_active_radio_text_high">High</string>
    <string name="add_a_goal_active_water_goal_heading">Water target for today? In litres.</string>
    <string name="add_a_goal_duration_water_goal_heading">Duration of goal?</string>
    <string name="add_a_goal_start_time_hint_text">Type now for current time</string>
    <string name="add_a_goal_end_time_hint_text">end time: 17:30</string>
    <string name="add_a_goal_cancel_cross_icon">x</string>
    <string name="add_a_goal_add_plus_icon">√</string>
    <string name="drinks_cat_red_wine_heading">Red Wine</string>
    <string-array name="weight_units">
        <item>Kg</item>
        <item>Stone</item>
        <item>lbs</item>
    </string-array>
    <string-array name="height_units">
        <item>foot</item>
        <item>metres</item>
    </string-array>
    <string name="espresso_drinks_cat_add_drink_menu_text">Add drink</string>
    <string name="drink_size_starbucks_heading">Drink size based on S/M/L starbucks</string>
    <string name="two_three_six">236ml</string>
    <string name="two_five_four">254ml</string>
    <string name="four_seven_three">473ml</string>
    <string name="cancel_coffee_adding_drink">cancel adding black coffee based drink</string>
    <string name="add_coffee_drink"> submit black coffee based drink</string>
    <string name="add_coffee_espresso_drink">Add a coffee drink</string>
    <string name="specify_drink_volume">Specify Drink volume in ml</string>
    <string name="name_drink_hint">Example:Espresso</string>
    <string name="example_volume">Example:140</string>
    <string name="number_of_espresso_shots">Number of espresso shots</string>
    <string name="example_of_espresso_shots">Example: 1 = 1 shot</string>
    <string name="cancel_button_espresso">Cancel button for adding espresso drinks</string>
    <string name="add_button_espresso"> Button for adding espresso drinks</string>
    <string name="example_litres">Example: 1.5</string>
    <string name="add_water_based_drink">Add Water based drink</string>
    <string name="example_water">Example: Bottle of water</string>
    <string name="add_button_water"> Button for adding Water drinks</string>
    <string name="cancel_button_water">Cancel button for adding water drinks</string>
    <string name="example_tea">Example: Green tea</string>
    <string name="example_volume_drink_volume">Example: 473ml</string>
    <string name="number_of_mins_steeped">Number of minutes tea steeped</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="cancel_button_tea">Cancel button for adding tea drinks</string>
    <string name="add_button_tea"> Button for adding tea drinks</string>
    <string name="add_tea_drink">Add a Tea drink</string>
    <string name="lager_heading">Lager</string>
    <string name="lager_bottle_description">Bottle of lager</string>
    <string name="craft_beer_heading">Craft Beer</string>
    <string name="craft_beer_bottle_description">Bottle of craft beer</string>
    <string name="real_ale_beer_heading">Real Ale</string>
    <string name="real_ale_beer_bottle_description">Stein of real ale</string>
    <string name="stout_beer_heading">Stout</string>
    <string name="stout_beer_bottle_description">Pint of stout</string>
    <string name="alcohol_text">Alcohol</string>
    <string name="water_text">Water</string>
    <string name="bottle_of_water_text">Bottle of Water</string>
    <string name="coffee_content_desc">coffee takeaway cup of Water</string>
    <string name="tea_title">Tea</string>
    <string name="tea_title_content_desc">Cup of Tea</string>
    <string name="tea_title_content_cat">Cup of Tea for tea category button</string>
    <string name="coffee_title">Coffee</string>
    <string name="coffee_title_content_cat">Coffee machine</string>
    <string name="coffee_title_content_desc">Coffee machine for caffeine category button</string>
    <string name="wine_title_content_desc">Wine Bottle for wine category button</string>
    <string name="beer_title_content_desc">Beer bottle for beer category button</string>
    <string name="spirit_title_content_desc">Spirit bottle for spirit category button</string>
    <string name="redwine_title">Red Wine</string>
    <string name="redwine_title_content_desc">Red wine  for red wine listing page</string>
    <string name="whitewine_title">White Wine</string>
    <string name="whitewine_title_content_desc">White wine  for white wine listing page</string>
</resources>