<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="coffee.prototype.android.cleandrinksapplication.AddTeaBasedDrink">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbargeneric" />

    <android.support.v7.widget.CardView
        android:id="@+id/add_espresso_drink_heading"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/forestGreen">


        <TextView
            android:id="@+id/setagoal_card_title"
            style="@style/Heading_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/add_tea_drink"
            android:textColor="@color/white"
            android:textSize="25sp"


            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_below="@+id/add_espresso_drink_heading"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foregroundGravity="center_horizontal">


        <TextView
            android:id="@+id/add_drink_title"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/name_drink_title"
            android:textSize="20sp"

            />


        <EditText
            android:id="@+id/tea_drink_name"
            style="@style/Heading_font"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/add_drink_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:hint="@string/example_tea"
            android:inputType="textAutoComplete"
            android:maxLength="20"
            android:maxLines="1"
            android:textAlignment="center" />


        <View
            android:id="@+id/divider_between_radio_buttons"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:background="@color/black">

        </View>

        <TextView
            android:id="@+id/add_drink_volume"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="110dp"
            android:text="@string/name_drink_volume_text"
            android:textSize="20sp"

            />


        <EditText
            android:id="@+id/tea_drink_volume"
            style="@style/Heading_font"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/add_drink_volume"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:hint="@string/example_volume_drink_volume"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:maxLines="1"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider_between_drink_volume"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="205dp"
            android:background="@color/black">

        </View>

        <TextView
            android:id="@+id/add_drink_strength"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink_volume"
            android:layout_gravity="center_horizontal"
            android:paddingTop="220dp"
            android:text="@string/number_of_mins_steeped"
            android:textSize="20sp"

            />

        <RadioGroup
            android:id="@+id/radio_group_exercise"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/add_drink_strength"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="260dp"
            android:orientation="horizontal">

            <RadioButton

                android:id="@+id/one_minitue"
                style="@style/receipt_child_values"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:checked="false"


                android:onClick="onCheckTeaStrengthDialog"
                android:text="@string/one"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/three_minitue"
                style="@style/receipt_child_values"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="onCheckTeaStrengthDialog"
                android:text="@string/three"

                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/five_minitue"
                style="@style/receipt_child_values"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="onCheckTeaStrengthDialog"
                android:text="@string/five"

                android:textSize="20sp" />

        </RadioGroup>


        <View
            android:id="@+id/divider_for_button"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="320dp"
            android:background="@color/black">

        </View>


        <Button
            android:id="@+id/cancel_tea_drink"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="335dp"
            android:background="@drawable/circle_red_button"
            android:contentDescription="@string/cancel_button_tea"
            android:onClick="cancelTeaPrompt"
            android:text="@string/add_a_goal_cancel_cross_icon"
            android:textSize="28sp"

            />

        <Button
            android:id="@+id/add_tea_drink"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="335dp"
            android:background="@drawable/circle_green_button"
            android:contentDescription="@string/add_button_tea"
            android:onClick="submitTeaDrink"
            android:text="@string/add_a_goal_add_plus_icon"


            android:textSize="28sp">

        </Button>

    </android.support.v7.widget.CardView>


</RelativeLayout>
