<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coffee.prototype.android.cleandrinksapplication.WineCategories">

    <include
        android:id="@+id/email_address_card"
        layout="@layout/toolbargeneric" />

    <android.support.v7.widget.CardView
        android:id="@+id/alcohol_sub_cat_red_wine"

        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp"
        android:background="?android:attr/selectableItemBackground"
        android:foregroundGravity="center_horizontal"
        android:onClick="changeToRedWineListing"
        card_view:cardBackgroundColor="@color/forestGreen"


        >

        <TextView
            style="@style/Heading_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/redwine_title"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/wine_card_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/redwine_title_content_desc"
            android:src="@drawable/red_wine_cat" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/alcohol_sub_cat_white_wine"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_below="@+id/alcohol_sub_cat_red_wine"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foregroundGravity="center_horizontal"
        android:onClick="changeToWhiteWineListing"
        card_view:cardBackgroundColor="@color/lightGrey"

        >

        <TextView
            style="@style/Heading_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/whitewine_title"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/white_wine_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/whitewine_title_content_desc"
            android:src="@drawable/white_wine" />
    </android.support.v7.widget.CardView>


</RelativeLayout>
