<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/lightGrey"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="coffee.prototype.android.cleandrinksapplication.Weight_and_Height_Activity">

    <android.support.v7.widget.CardView
        android:id="@+id/goal_heading_card"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@android:color/holo_green_dark">


        <ImageView
            android:id="@+id/weight_height_image_banner"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/weight_height_activity_height_image_content_description"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/weight_height" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/description_of_weight_activity"
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/goal_heading_card"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/white">


        <TextView
            android:id="@+id/weight_sub_heading"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="40dp"
            android:text="@string/weight_height_activity_heading"
            android:textSize="25sp"

            />

        <TextView
            android:id="@+id/weight_paragraph_text"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="90dp"
            android:text="@string/weight_height_activity_sub_heading"
            android:textSize="20sp"

            />

        <View
            android:id="@+id/divider_between_headings"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="140dp"
            android:background="@color/lightGrey">

        </View>



        
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/weight_height_activity_weight_hint"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal"
            style="@style/receipt_child_values"
            />

        <Spinner
            android:id="@+id/weight_spinner"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="145dp"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            style="@style/receipt_child_values"

            />



        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="220dp"
            android:background="@color/lightGrey">

        </View>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/weight_height_activity_height_hint"
            android:layout_marginTop="220dp"
            android:layout_gravity="center_horizontal"
            style="@style/receipt_child_values"

            />

        <Spinner
            android:id="@+id/height_spinner"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="215dp"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            style="@style/receipt_child_values"
            />

        <Button
            android:id="@+id/next_button"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="280dp"
            android:text="@string/next_button_text" />

    </android.support.v7.widget.CardView>



</RelativeLayout>
